--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,22 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Label">
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="RatingContainer" parent="Label">
+    </style>
+
+    <style name="RatingTitle" parent="Label">
+        <item name="android:textSize">16sp</item>
+        <item name="android:lines">2</item>
+    </style>
+
+    <style name="RatingValue" parent="Label">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 
 </resources>
